@@ -1,3 +1,4 @@
+	* fixed add_node python binding
 	* fixed bug in udp tracker scrape response parsing
 
 release 0.14.10
